--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Countdown Timer</title>
+  <title>Nedräkning</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <h1 id="headline">Nedräkning till ....</h1>
+  <h1 id="headline">Nedräkning till Julafton</h1>
   <div id="countdown">
     <ul>
       <li><span id="days"></span>Dagar</li>
